K8s/networking/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-to-mongo 
  namespace: bookverse
spec:
  podSelector:
    matchLabels:
       app: mongo
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend
    ports:
    - port: 27017
      protocol: TCP
